# internal/handler/user_communication_service/get_user_communication_service.go
@@ -1,0 +1,42 @@
+package user_communication_service
+
+import (
+	dto "hs-backend/internal/dto/user_communication_service"
+	"hs-backend/internal/handler"
+	"hs-backend/internal/repository"
+
+	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+)
+
+type GetUserCommunicationServiceHandler struct {
+	Deps *handler.HandlerDeps
+}
+
+func NewGetUserCommunicationServiceHandler(deps *handler.HandlerDeps) *GetUserCommunicationServiceHandler {
+	return &GetUserCommunicationServiceHandler{deps}
+}
+
+// GetUserCommunicationServiceHandler godoc
+// @Summary Get user communication services
+// @Description Returns user communication services
+// @Tags User Communication Services
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Success 200 {object} dto.GetUserCommunicationServicesResponse
+// @Failure 500 {object} error.ErrorResponse
+// @Router /api/users/communication-services [get]
+func (h *GetUserCommunicationServiceHandler) Handle(c *gin.Context) {
+	repo := repository.NewUserCommunicationServiceRepository(h.Deps.DB)
+
+	userId := uuid.MustParse(c.MustGet("user_id").(string))
+
+	ucsList, err := repo.FindByUserId(userId)
+	if err != nil {
+		handler.InternalError(c, "Failed to get user communication services: "+err.Error())
+		return
+	}
+
+	handler.OK(c, dto.ToGetUserCommunicationServicesResponse(ucsList))
+}
